--- a/src/home.html
+++ b/src/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="Bragason And Associates Pty Ltd" />
-    <title>Chart of Account</title>
+    <title>Chart of Accounts</title>
     <!-- Font Awsome -->
     <script>
         FontAwesomeConfig = {
